Fixed overflow-x-hidden-l.

--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -1027,7 +1027,7 @@ img { max-width: 100%; }
 /* Can combine this with overflow-hidden to make background images grow on hover
  * even if you are using background-size: cover */
 /* Add pointer on hover */
-.pointer:hover { cursor: pointer; }
+.pointer { cursor: pointer; }
 /*
    Add shadow on hover.
 
@@ -1229,7 +1229,7 @@ img { max-width: 100%; }
  .w-20-l { width: 20%; }
  .w-60-l { width: 60%; }
  /* Overflow */
- .overflow-hidden-l { overflow: hidden; }
+ .overflow-x-hidden-l { overflow: hidden; }
  /* Spacing */
  .ph0-l { padding-left: 0; padding-right: 0; }
  .ph4-l { padding-left: 4rem; padding-right: 4rem; }
